--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,16 @@
             "program": "${workspaceFolder}/build/bin/btormc",
             "args": [
                 "-kmax",
-                "20",
-                "-v", "3",
-                "${workspaceFolder}/examples/btormc/count2.btor2",
-                ">",
-                "${workspaceFolder}/count2.witnessmc",
+                "229",
+                // "-kind",
+                "-v",
+                "3",
+                // "-rw",
+                // "0",
+                "${workspaceFolder}/examples/btormc/ponylink-slaveTXlen-sat.btor2",
+                // "${workspaceFolder}/examples/btormc/count2.btor2",
+                // ">",
+                // "${workspaceFolder}/ponylink-slaveTXlen-sat.log",
             ],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
