--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,16 @@
             "program": "${workspaceFolder}/build/bin/btormc",
             "args": [
                 "-kmax",
-                "229",
+                "20",
+                // "229",
                 // "-kind",
                 "-v",
-                "3",
-                // "-rw",
-                // "0",
-                "${workspaceFolder}/examples/btormc/ponylink-slaveTXlen-sat.btor2",
-                // "${workspaceFolder}/examples/btormc/count2.btor2",
+                "4",
+                "-rw",
+                "0",
+                // "${workspaceFolder}/examples/btormc/ponylink-slaveTXlen-sat.btor2",
+                // "${workspaceFolder}/examples/btormc/count2.btor2",btor_dumper/design_btor_single.btor
+                "${workspaceFolder}/examples/btormc/twocount32.btor2",
                 // ">",
                 // "${workspaceFolder}/ponylink-slaveTXlen-sat.log",
             ],
