--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "random": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "map": "c",
+        "bitset": "c",
+        "chrono": "c"
     }
 }
